--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,7 +5,7 @@
   margin-right: 30px;
   border: none;
   padding: 10px 20px;
-  width: 120px;
+  // width: 120px;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
