--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,14 +7,6 @@ nav {
   text-decoration: none;
 }
 
-.navbar-heading {
-  color: white;
-  font-weight: bold;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
-  // width: 85%;
-  text-align: center;
-}
-
 .navbar-top {
   display: flex;
   align-items: center;
@@ -29,9 +21,16 @@ nav {
 }
 
 .navbar-middle {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
+  position: absolute;
+  width: fit-content;
+  left: 50%;
+  transform: translateX(-50%);
+  h2 {
+    color: white;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+    // width: 85%;
+  }
 }
 
 .img-navbar-height-100 {
