--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
     </a>
 
     <div class="navbar-middle">
-      <h2 class="navbar-heading">Find your next adventure</h2>
+      <h2>Find your next adventure</h2>
     </div>
 
     <div class="navbar-end">
