--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -28,9 +28,14 @@
 
 .card-trip h2 {
   min-width: 70px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
-  margin: 0;
+  margin: 0px 50px 8px 0px;
+  padding: 5px;
+}
+
+.card-trip h3 {
+  font-weight: bold;
 }
 
 .card-trip p {
@@ -42,7 +47,6 @@
 .card-trip-infos {
   height: 100px;
   p {
-    height: 40px;
     overflow: hidden;
   }
 }
@@ -57,16 +61,32 @@
 
 .card-trip-infos .card-trip-user {
   position: absolute;
-  right: 7%;
-  top: -20px;
+  right: 3%;
+  top: -40px;
   width: 60px;
 }
 
-.card-planner {
-  text-align: center;
-  font-size: 10px;
+.card-trip-infos .card-planner {
+  font-size: 16px;
   color: $green;
+  position: absolute;
+  right: 2%;
+  top: 43px;
+  margin-bottom: 30px;
 }
+
+
+.card-trip-infos .card-tags {
+  display: inline-block;
+}
+// .card-trip-infos .card-trip-pricing {
+//   text-align: center;
+//   font-size: 16px;
+//   color: $dark-green;
+//   position: absolute;
+//   right: 5%;
+//   top: 70px;
+// }
 
 a {
   text-decoration: none;
@@ -92,4 +112,13 @@ p {
 
 .card-planner-budget{
   margin-top: 20px;
+}
+
+.btn {
+  background-color: $very-light-green;
+  color: $green;
+  font-family: $body-font;
+  font-size: 12px;
+  border-radius: 5px;
+  margin-right: 5px;
 }
