--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,10 +17,12 @@
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 
-            <% if current_user.trips.empty? %>
+            <% if !current_user.custom_trips.any? %>
               <%= link_to "Suggest a trip", new_planner_trip_path, class: "dropdown-item" %>
             <% else %>
-              <%= link_to "My messages", my_trip_path(current_user.trips.first.id), class: "dropdown-item" %>
+
+
+              <%= link_to "My messages", my_trip_path(current_user.custom_trips.first), class: "dropdown-item" %>
             <% end %>
 
             <%= link_to "My trips", planner_trips_path, class: "dropdown-item" %>
