--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -29,9 +29,9 @@
 
 .card-trip h2 {
   min-width: 70px;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
-  margin: 0px 50px 8px 0px;
+  margin: 0px 12px 8px 0px;
   padding: 5px;
 }
 
@@ -40,7 +40,7 @@
 }
 
 .card-trip p {
-  font-size: 12px;
+  font-size: 16px;
   opacity: .7;
   margin: 0;
 }
@@ -68,12 +68,8 @@
 }
 
 .card-trip-infos .card-planner {
-  font-size: 16px;
+  font-weight: bold;
   color: $green;
-  position: absolute;
-  right: 2%;
-  top: 43px;
-  margin-bottom: 30px;
 }
 
 
@@ -119,7 +115,7 @@ p {
   background-color: $very-light-green;
   color: $green;
   font-family: $body-font;
-  font-size: 12px;
+  font-size: 10px;
   border-radius: 5px;
   margin-right: 5px;
 }
