--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -28,8 +28,10 @@
 }
 
 .card-trip h2 {
+  height: 50px;
+  overflow: hidden;
   min-width: 70px;
-  font-size: 20px;
+  font-size: 19px;
   font-weight: bold;
   margin: 0px 12px 8px 0px;
   padding: 5px;
