--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -95,8 +95,22 @@
   box-shadow: 0px 0px 5px rgba(0, 0, 6px, 0.4);
 }
 
+.both-i{
+  display: flex;
+  align-items: flex-start;
+}
+
+.button-i{
+  background-color: $very-dark-green;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 15px;
+}
+
 .button-container {
   margin: 25px 0;
+  display: flex;
+  align-items: center;
   .link-btn-container {
     color: white;
     text-decoration: none;
