--- a/app/views/planner/trips/show.html.erb
+++ b/app/views/planner/trips/show.html.erb
@@ -8,16 +8,18 @@
     <h2>Trip downloaded by <strong>50</strong> users</h2>
 
     <div class="both-i">
-      <%= link_to planner_trip_path(@trip), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this trip?"}, class: "button-i" do %>
-        <i class="fa-solid fa-trash fa-lg" style="color: #ffd600;"></i>
-      <% end %>
-
       <div class="both-i">
         <%#= link_to 'Edit my trip', edit_planner_trip_path(trip_id:@trip.id), class: "link-btn-container button-dark-green-show" %>
         <%= link_to edit_planner_trip_path(trip_id:@trip.id), class: "link-btn-container button-i" do %>
           <i class="fa-regular fa-pen-to-square " style="color: #ffd600;"></i>
         <% end %>
       </div>
+
+    <div class="both-i">
+      <%= link_to planner_trip_path(@trip), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this trip?"}, class: "button-i" do %>
+        <i class="fa-solid fa-trash fa-lg" style="color: #ffd600;"></i>
+      <% end %>
+    </div>
     </div>
   </div>
 
