--- a/app/assets/stylesheets/components/_my_trips.scss
+++ b/app/assets/stylesheets/components/_my_trips.scss
@@ -107,6 +107,7 @@
 #new_messages, #btn_new_messages {
   background-color: white;
   border: 0px solid black;
+  margin-right: 0;
 }
 
 .my_trips_destinations table {
