--- a/app/views/my/trips/show.html.erb
+++ b/app/views/my/trips/show.html.erb
@@ -113,7 +113,7 @@
 </div>
 
 
-<%= render "layouts/footer" %>
+<%= render "layouts/footer", height: 50 %>
 
 <script>
   document.getElementById('new_messages').addEventListener('keydown', function(event) {
