--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,7 +8,14 @@
   // margin-top: auto;
   bottom: 0;
   width: 100%;
+}
+
+.footer-100 {
   height: 100px;
+}
+
+.footer-50 {
+  height: 50px;
 }
 // .footer-relative {
 //   position: relative;
