--- a/app/assets/stylesheets/components/_planner/index.scss
+++ b/app/assets/stylesheets/components/_planner/index.scss
@@ -24,6 +24,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
   border-radius: 5px;
+  height: 350px;
 
   &:hover {
     transform: translateY(-5px);
