--- a/app/views/my/trips/show.html.erb
+++ b/app/views/my/trips/show.html.erb
@@ -98,12 +98,12 @@
           <br>
           <% if current_user == @trip.planner %>
             <% if  @trip.custom_validate %>
-              <%= link_to "Telecharger", my_trip_download_pdf_path(@trip), :format => 'pdf', class: "button" %>
+              <%= link_to "Download", my_trip_download_pdf_path(@trip), :format => 'pdf', class: "button" %>
             <% else %>
-              <%= link_to "Valider", my_trip_custom_validate_path(@trip), data: {turbo_method: :patch}, class: "button" %>
+              <%= link_to "Validate my changes", my_trip_custom_validate_path(@trip), data: {turbo_method: :patch}, class: "button" %>
             <% end %>
           <% else %>
-            <%= link_to "Telecharger", my_trip_download_pdf_path(@trip), :format => 'pdf', class: "button" %>
+            <%= link_to "Download", my_trip_download_pdf_path(@trip), :format => 'pdf', class: "button" %>
           <% end %>
 
         </div>
