--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -111,6 +111,7 @@
   margin: 25px 0;
   display: flex;
   align-items: center;
+  justify-content: center;
   .link-btn-container {
     color: white;
     text-decoration: none;
