--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,15 +17,15 @@
     <h2 class="pb-4">Most searched destinations:</h2>
       <div class="card-container">
         <div class="travel-card">
-          <%= image_tag('santorini.jpg', width: 150, height: 150) %>
+          <%= image_tag('santorini.jpg') %>
           <p class="city-name">Santorin</p>
         </div>
         <div class="travel-card">
-          <%= image_tag('tokyo.jpg', width: 150, height: 150) %>
+          <%= image_tag('tokyo.jpg') %>
           <p class="city-name">Tokyo</p>
         </div>
         <div class="travel-card">
-          <%= image_tag('bali.jpg', width: 150, height: 150) %>
+          <%= image_tag('bali.jpg') %>
           <p class="city-name">Bali</p>
         </div>
       </div>
@@ -34,15 +34,15 @@
         <h2 class="pb-4">Our recommandations of the day:</h2>
         <div class="card-container">
           <div class="travel-card">
-            <%= image_tag('rio.jpg', width: 150, height: 150) %>
+            <%= image_tag('rio.jpg') %>
             <p class="city-name">Rio de Janeiro</p>
           </div>
           <div class="travel-card">
-            <%= image_tag('el-calafate.jpg', width: 150, height: 150) %>
+            <%= image_tag('el-calafate.jpg') %>
             <p class="city-name">El Calafate</p>
           </div>
           <div class="travel-card">
-            <%= image_tag('petra.jpg', width: 150, height: 150) %>
+            <%= image_tag('petra.jpg') %>
             <p class="city-name">Petra</p>
           </div>
         </div>
