--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -29,13 +29,12 @@ nav {
     color: white;
     font-weight: bold;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
-    // width: 85%;
+    margin-top: 80px;
   }
 }
 
 .img-navbar-height-100 {
-  width: 200px;
-  margin-top: 20px;
+  width: 35%;
 }
 
 .img-navbar-height-20 {
