made some changes for responsive design and took off authentication from index and show of trips

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -10,6 +10,13 @@
   grid-gap: 24px;
 }
 
+@media(max-width: 768px) {
+  .card-trip-grid {
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+  }
+}
+
 .card-trip {
   flex-grow: 1;
   overflow: hidden;
@@ -29,9 +36,8 @@
 
 .card-trip h2 {
   display: flex;
-  height: 45px;
+  height: 50px;
   align-items: center;
-  overflow: hidden;
   min-width: 70px;
   font-size: 16px;
   font-weight: bold;
@@ -115,11 +121,12 @@ p {
   margin-top: 20px;
 }
 
-.btn {
+.btn-tag {
   background-color: $very-light-green;
   color: $green;
   font-family: $body-font;
   font-size: 10px;
+  border: none;
   border-radius: 5px;
   margin-right: 5px;
 }
