--- a/app/assets/stylesheets/components/_homepage.scss
+++ b/app/assets/stylesheets/components/_homepage.scss
@@ -40,12 +40,13 @@
     transform: translate(-50%, -50%);
     font-size: 36px;
     text-shadow: 1px 1px 2px black;
+    text-align: center;
   }
 }
 
 @media (max-width: 768px) {
   .content {
-    margin: 0 20px; 
+    margin: 0 20px;
   }
 
   .travel-card {
