--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,6 +1,6 @@
 <%= render "/layouts/navbar", hauteur: "100", searchbar: false %>
 
-<div class="container">
+<div class="container-trip-show">
   <div class="trip_show_header">
     <h2><strong><%= @trip.title %></strong></h2>
     <h3><strong>by <%= @trip.planner.first_name %> <%= @trip.planner.last_name %></strong></h3>
