--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -4,7 +4,7 @@
   <div class="searchbar-container text-center">
     <div class="d-flex searchbar-wrapper">
           <%= f.input :title, label: false,
-            placeholder: 'Where do you want to go?',
+            placeholder: 'Where?',
             wrapper_html: { class: "searchbar-wrapper" },
             input_html: { value: @query, class: "searchbar form-control rounded-pill mr-2 py-2 w-70", style: "width: 80%;" } %>
           <%= f.submit "Search", class: "button-dark-green rounded-pill searchbar-button py-0" %>
